--- a/src/com/github/view/adminScreen.fxml
+++ b/src/com/github/view/adminScreen.fxml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXTextField?>
+<?import com.jfoenix.controls.JFXTreeTableView?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
@@ -7,12 +10,11 @@
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 
 <AnchorPane id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" stylesheets="@../../../resources/style/login.css" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.AdminController">
@@ -124,20 +126,17 @@
                   </children></AnchorPane>
             </content>
          </Tab>
-       <Tab style="-fx-background-radius: 20;" text="View Booking">
+       <Tab fx:id="viewBookingTab" onSelectionChanged="#viewBookingTabSelected" style="-fx-background-radius: 20;" text="View Booking">
             <content>
                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                   <children>
-                     <TableView fx:id="tableView" prefHeight="444.0" prefWidth="550.0">
-                        <columns>
-                           <TableColumn fx:id="name" editable="false" prefWidth="126.0" text="Name" />
-                           <TableColumn editable="false" prefWidth="117.0" text="Type" />
-                           <TableColumn editable="false" minWidth="5.0" prefWidth="98.0" text="From" />
-                           <TableColumn editable="false" prefWidth="103.0" text="To" />
-                           <TableColumn editable="false" prefWidth="104.0" text="Price" />
-                        </columns>
-                     </TableView>
-                     <Button layoutX="491.0" layoutY="445.0" mnemonicParsing="false" text="Print" />
+                     <JFXTreeTableView fx:id="treeView" prefHeight="364.0" prefWidth="550.0" AnchorPane.bottomAnchor="107.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                     <Pane layoutY="364.0" prefHeight="106.0" prefWidth="550.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="364.0">
+                        <children>
+                           <JFXTextField fx:id="searchTextField" focusColor="#641c24" labelFloat="true" layoutX="286.0" layoutY="28.0" prefHeight="25.0" prefWidth="133.0" promptText="Username" />
+                           <JFXButton fx:id="searchButton" buttonType="RAISED" layoutX="138.0" layoutY="41.0" ripplerFill="WHITE" style="-fx-background-color: #641c24;" text="Search" textFill="WHITE" />
+                        </children>
+                     </Pane>
                   </children></AnchorPane>
             </content>
          </Tab>
