--- a/src/com/github/view/driver.fxml
+++ b/src/com/github/view/driver.fxml
@@ -1,32 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXTreeTableView?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" stylesheets="@../../../resources/style/login.css" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.Driver">
+<AnchorPane id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" stylesheets="@../../../resources/style/login.css" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.Driver">
     <TabPane prefHeight="500.0" prefWidth="550.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
-            <Tab style="-fx-background-radius: 20;" text="Update Time Schedule">
+            <Tab fx:id="viewUpdateTimeTabSelected" style="-fx-background-radius: 20;" text="Update Time Schedule">
                 <content>
                     <Button mnemonicParsing="false" text="Button" />
                 </content>
                 <content>
                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                   <children>
-                     <ComboBox fx:id="delay" layoutX="14.0" layoutY="137.0" prefWidth="150.0" promptText="Chocie" />
-                     <Label layoutX="14.0" layoutY="95.0" text="Delay :" />
-                     <TextArea fx:id="description" layoutX="303.0" layoutY="136.0" prefHeight="200.0" prefWidth="200.0" />
-                     <Label layoutX="303.0" layoutY="95.0" text="Description:" />
-                     <Button layoutX="249.0" layoutY="390.0" mnemonicParsing="false" onAction="#handleDescription" style="-fx-background-radius: 20;" text="Save" />
+                     <Label layoutX="14.0" layoutY="14.0" text="Delay :" />
+                     <Label layoutX="299.0" layoutY="14.0" text="Message:" />
+                     <TextField layoutX="14.0" layoutY="39.0" />
+                     <TextArea layoutX="299.0" layoutY="39.0" prefHeight="66.0" prefWidth="251.0" />
+                     <JFXTreeTableView fx:id="treeView" layoutY="105.0" prefHeight="284.0" prefWidth="550.0" />
+                     <JFXButton layoutX="249.0" layoutY="389.0" text="Save" />
                   </children></AnchorPane>
                 </content>
             </Tab>
-            <fx:include source="viewProfile.fxml"></fx:include>
+            <fx:include source="viewProfile.fxml" />
         </tabs>
     </TabPane>
     <Button id="exitLoginButton" fx:id="signOutButton" layoutX="522.0" layoutY="1.5" mnemonicParsing="false" prefHeight="24.0" prefWidth="24.0" />
