--- a/src/com/github/view/taxiDriver.fxml
+++ b/src/com/github/view/taxiDriver.fxml
@@ -2,30 +2,31 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" stylesheets="@../../../resources/style/login.css" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.TaxiDriver">
    <TabPane prefHeight="500.0" prefWidth="550.0" tabClosingPolicy="UNAVAILABLE">
      <tabs>
-         <Tab style="-fx-background-radius: 20;" text="Update Time Schedule">
+         <Tab style="-fx-background-radius: 20;" text="Availability">
             <content>
                <Button mnemonicParsing="false" text="Button" />
             </content>
             <content>
                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                   <children>
-                     <ComboBox fx:id="delay" layoutX="14.0" layoutY="150.0" prefWidth="150.0" promptText="Choice" />
-                     <Label layoutX="14.0" layoutY="103.0" text="Delay:" />
-                     <TextArea fx:id="description" layoutX="312.0" layoutY="150.0" prefHeight="200.0" prefWidth="200.0" />
-                     <Label layoutX="312.0" layoutY="103.0" text="Description:" />
-                     <Button fx:id="handleDescription" layoutX="249.0" layoutY="390.0" mnemonicParsing="false" style="-fx-background-radius: 20;" text="Save" />
-                     <CheckBox fx:id="Available" layoutX="14.0" layoutY="227.0" mnemonicParsing="false" text="Available" />
-                     <CheckBox fx:id="UnAvailable" layoutX="14.0" layoutY="257.0" mnemonicParsing="false" text="Unavailable" />
+                     <TextArea fx:id="Message" layoutX="312.0" layoutY="150.0" prefHeight="200.0" prefWidth="200.0" />
+                     <Label layoutX="312.0" layoutY="103.0" text="Message:" />
+                     <Button fx:id="handleDescription" layoutX="223.0" layoutY="390.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="94.0" style="-fx-background-radius: 20;" text="Save">
+                        <font>
+                           <Font size="15.0" />
+                        </font></Button>
+                     <CheckBox fx:id="Available" layoutX="21.0" layoutY="157.0" mnemonicParsing="false" text="Available" />
+                     <CheckBox fx:id="UnAvailable" layoutX="21.0" layoutY="192.0" mnemonicParsing="false" text="Unavailable" />
                   </children></AnchorPane>
             </content>
          </Tab>
