--- a/src/com/github/view/driver.fxml
+++ b/src/com/github/view/driver.fxml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXTextArea?>
+<?import com.jfoenix.controls.JFXTextField?>
 <?import com.jfoenix.controls.JFXTreeTableView?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
 <AnchorPane id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" stylesheets="@../../../resources/style/login.css" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.Driver">
     <TabPane prefHeight="500.0" prefWidth="550.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
-            <Tab fx:id="viewUpdateTimeTabSelected" style="-fx-background-radius: 20;" text="Update Time Schedule">
+            <Tab style="-fx-background-radius: 20;" text="Update Time Schedule">
                 <content>
                     <Button mnemonicParsing="false" text="Button" />
                 </content>
@@ -22,10 +22,10 @@
                   <children>
                      <Label layoutX="14.0" layoutY="14.0" text="Delay :" />
                      <Label layoutX="299.0" layoutY="14.0" text="Message:" />
-                     <TextField layoutX="14.0" layoutY="39.0" />
-                     <TextArea layoutX="299.0" layoutY="39.0" prefHeight="66.0" prefWidth="251.0" />
                      <JFXTreeTableView fx:id="treeView" layoutY="105.0" prefHeight="284.0" prefWidth="550.0" />
                      <JFXButton layoutX="249.0" layoutY="389.0" text="Save" />
+                     <JFXTextField fx:id="delay" layoutX="14.0" layoutY="54.0" />
+                     <JFXTextArea fx:id="driverMessage" layoutX="299.0" layoutY="36.0" prefHeight="62.0" prefWidth="218.0" />
                   </children></AnchorPane>
                 </content>
             </Tab>
