--- a/src/com/github/view/login.fxml
+++ b/src/com/github/view/login.fxml
@@ -1,84 +1,170 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXPasswordField?>
+<?import com.jfoenix.controls.JFXTextField?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane id="loginScreenPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="640.0" prefWidth="400.0" style="-fx-background-opacity: 0.2;" stylesheets="@../../../resources/style/login.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.LoginController">
-   <Pane id="loginPane" fx:id="loginPane" prefHeight="640.0" prefWidth="400.0">
-      <Button id="exitLoginButton" fx:id="exitLoginButton" layoutX="362.0" layoutY="14.0" mnemonicParsing="false" prefHeight="24.0" prefWidth="24.0" />
-      <VBox layoutX="91.0" layoutY="121.0" prefHeight="323.0" prefWidth="219.0" spacing="10.0">
-         <HBox alignment="CENTER" prefHeight="100.0" prefWidth="219.0">
-         </HBox>
-         <TextField id="usernameField" fx:id="tfAccountLogin" prefHeight="40.0" prefWidth="219.0" promptText="Username" />
-         <PasswordField id="passwordField" fx:id="pfPasswordLogin" prefHeight="40.0" prefWidth="219.0" promptText="Password" />
-         <VBox spacing="10.0">
-            <HBox alignment="CENTER">
-               <Button id="loginButton" mnemonicParsing="false" onAction="#loginButtonPressed" prefHeight="40.0" prefWidth="219.0" text="LOGIN" />
-            </HBox>
-            <HBox alignment="CENTER">
-               <VBox>
-                  <Button id="newUserButton" mnemonicParsing="false" onAction="#handleNewUserButtonPressed" prefHeight="21.0" prefWidth="99.0" text="New user?" />
-                  <Button id="forgotPasswordButton" mnemonicParsing="false" onAction="#handleForgotPasswordButtonPressed" prefHeight="21.0" prefWidth="99.0" text="Forgot password?" />
-               </VBox>
-            </HBox>
-         </VBox>
-      </VBox>
-   </Pane>
-   <Pane id="registrationPane" fx:id="registrationPane" prefHeight="640.0" prefWidth="400.0" visible="false">
-      <Button id="exitRegistrationButton" layoutX="362.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleExitRegistrationButton" prefHeight="24.0" prefWidth="24.0" />
-      <VBox layoutX="91.0" layoutY="121.0" prefHeight="374.0" prefWidth="219.0" spacing="10.0">
-         <HBox alignment="CENTER" prefHeight="54.0" prefWidth="219.0">
-            <Label id="newUserLabel" text="Registration" />
-         </HBox>
-         <TextField fx:id="tfFirstName" prefHeight="40.0" prefWidth="219.0" promptText="*First Name" />
-         <TextField fx:id="tfLastName" prefHeight="40.0" prefWidth="219.0" promptText="*Last Name" />
-         <TextField fx:id="tfPhoneReg" prefHeight="40.0" prefWidth="219.0" promptText="*Phone Number" />
-         <TextField fx:id="tfUsernameReg" prefHeight="40.0" prefWidth="219.0" promptText="*Username" />
-         <TextField fx:id="tfEmailReg" prefHeight="40.0" prefWidth="219.0" promptText="*Email" />
-         <Button id="nextButton" mnemonicParsing="false" onAction="#handleRegistrationPaneNextButtonPressed" prefHeight="40.0" prefWidth="219.0" text="NEXT &gt;" />
-         <HBox alignment="CENTER" centerShape="false">
-            <Label id="specialAccountDetails" fx:id="newUserMsgLabel" alignment="CENTER" contentDisplay="CENTER" prefHeight="41.0" prefWidth="219.0" textAlignment="CENTER" wrapText="true">
-            </Label>
-         </HBox>
-      </VBox>
-   </Pane>
-    <Pane id="passwordPane" fx:id="passwordPane" prefHeight="640.0" prefWidth="400.0" visible="false">
-        <Button id="exitRegistrationButton" layoutX="362.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleExitPasswordPaneButton" prefHeight="24.0" prefWidth="24.0" />
-        <VBox layoutX="91.0" layoutY="121.0" prefHeight="383.0" prefWidth="219.0" spacing="10.0">
-            <HBox alignment="CENTER" prefHeight="54.0" prefWidth="219.0">
-                <Label id="newUserLabel" text="Choose a password" />
-            </HBox>
-            <TextField fx:id="tfAccountPass" prefHeight="40.0" prefWidth="219.0" promptText="*Account ID" />
-            <PasswordField fx:id="pfConfirmationCode" prefHeight="40.0" prefWidth="219.0" promptText="*Confirmation Code" />
-            <PasswordField fx:id="pfPasswordPass" prefHeight="40.0" prefWidth="219.0" promptText="*Password" />
-            <PasswordField fx:id="pfPasswordConfirm" prefHeight="40.0" prefWidth="219.0" promptText="*Confirm Password" />
-            <Button id="finishButton" mnemonicParsing="false" onAction="#handleFinishButtonPressed" prefHeight="40.0" prefWidth="219.0" text="FINISH" />
-            <HBox alignment="CENTER" centerShape="false">
-                <Label id="passwordDetailsLabel" fx:id="passwordDetailsLabel" alignment="CENTER" contentDisplay="CENTER" prefHeight="77.0" prefWidth="219.0" textAlignment="CENTER" wrapText="true" />
-            </HBox>
-        </VBox>
-    </Pane>
-   <Pane id="resetPasswordPane" fx:id="resetPasswordPane" prefHeight="640.0" prefWidth="400.0" visible="false">
-      <Button id="exitResetButton" layoutX="362.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleExitResetPasswordButton" prefHeight="24.0" prefWidth="24.0" />
-      <VBox layoutX="91.0" layoutY="121.0" prefHeight="374.0" prefWidth="219.0" spacing="10.0">
-         <HBox alignment="CENTER" prefHeight="117.0" prefWidth="219.0">
-            <Label id="resetLabel" text="Reset Password" />
-         </HBox>
-         <TextField id="emailField" fx:id="tfEmailReset" prefHeight="40.0" prefWidth="219.0" promptText="*Email" />
-         <VBox spacing="10.0">
-            <HBox alignment="CENTER">
-               <Button id="nextButton" mnemonicParsing="false" onAction="#handleResetPasswordNextButtonPressed" prefHeight="40.0" prefWidth="219.0" text="Next &gt;" />
-            </HBox>
-            <HBox alignment="CENTER">
-               <Label id="resetPasswordMsgLabel" fx:id="resetPasswordMsgLabel" alignment="CENTER" prefHeight="50.0" prefWidth="219.0" textAlignment="CENTER" />
-            </HBox>
-         </VBox>
-      </VBox>
-   </Pane>
+<AnchorPane id="loginScreenPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="640.0" prefWidth="400.0" style="-fx-background-opacity: 0.2;" stylesheets="@../../../resources/style/login.css" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.LoginController">
+   <children>
+      <Pane id="loginPane" fx:id="loginPane" prefHeight="640.0" prefWidth="400.0">
+         <children>
+            <Button id="exitLoginButton" fx:id="exitLoginButton" layoutX="362.0" layoutY="14.0" mnemonicParsing="false" prefHeight="24.0" prefWidth="24.0" />
+            <VBox layoutX="91.0" layoutY="121.0" prefHeight="323.0" prefWidth="219.0" spacing="10.0">
+               <children>
+                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="219.0" />
+                  <JFXTextField id="usernameField" fx:id="tfAccountLogin" focusColor="#641c24" labelFloat="true" prefHeight="30.0" prefWidth="219.0" promptText="Username" unFocusColor="#641c24">
+                     <VBox.margin>
+                        <Insets bottom="10.0" />
+                     </VBox.margin>
+                  </JFXTextField>
+                  <JFXPasswordField id="passwordField" fx:id="pfPasswordLogin" focusColor="#641c24" labelFloat="true" prefHeight="30.0" prefWidth="219.0" promptText="Password" unFocusColor="#641c24">
+                     <VBox.margin>
+                        <Insets />
+                     </VBox.margin>
+                  </JFXPasswordField>
+                  <VBox spacing="10.0">
+                     <children>
+                        <HBox alignment="CENTER">
+                           <children>
+                              <JFXButton id="loginButton" buttonType="RAISED" onAction="#loginButtonPressed" prefHeight="40.0" prefWidth="219.0" ripplerFill="WHITE" text="LOGIN" />
+                           </children>
+                        </HBox>
+                        <HBox alignment="CENTER">
+                           <children>
+                              <VBox>
+                                 <children>
+                                    <JFXButton id="newUserButton" buttonType="RAISED" onAction="#handleNewUserButtonPressed" prefHeight="21.0" prefWidth="99.0" ripplerFill="#641c24" text="New user?" />
+                                    <JFXButton id="forgotPasswordButton" buttonType="RAISED" onAction="#handleForgotPasswordButtonPressed" prefHeight="21.0" prefWidth="99.0" ripplerFill="#641c24" text="Forgot password?" />
+                                 </children>
+                              </VBox>
+                           </children>
+                        </HBox>
+                     </children>
+                  </VBox>
+               </children>
+            </VBox>
+         </children>
+      </Pane>
+      <Pane id="registrationPane" fx:id="registrationPane" prefHeight="640.0" prefWidth="400.0" visible="false">
+         <children>
+            <Button id="exitRegistrationButton" layoutX="362.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleExitRegistrationButton" prefHeight="24.0" prefWidth="24.0" />
+            <VBox layoutX="91.0" layoutY="121.0" prefHeight="374.0" prefWidth="219.0" spacing="10.0">
+               <children>
+                  <HBox alignment="CENTER" prefHeight="54.0" prefWidth="219.0">
+                     <children>
+                        <Label id="newUserLabel" text="Registration" />
+                     </children>
+                  </HBox>
+                  <JFXTextField fx:id="tfFirstName" focusColor="#641c24" labelFloat="true" prefHeight="30.0" prefWidth="219.0" promptText="*First Name" unFocusColor="#641c24">
+                     <VBox.margin>
+                        <Insets bottom="10.0" />
+                     </VBox.margin>
+                  </JFXTextField>
+                  <JFXTextField fx:id="tfLastName" focusColor="#641c24" labelFloat="true" prefHeight="30.0" prefWidth="219.0" promptText="*Last Name" unFocusColor="#641c24">
+                     <VBox.margin>
+                        <Insets bottom="10.0" />
+                     </VBox.margin>
+                  </JFXTextField>
+                  <JFXTextField fx:id="tfPhoneReg" focusColor="#641c24" labelFloat="true" prefHeight="30.0" prefWidth="219.0" promptText="*Phone Number" unFocusColor="#641c24">
+                     <VBox.margin>
+                        <Insets bottom="10.0" />
+                     </VBox.margin>
+                  </JFXTextField>
+                  <JFXTextField fx:id="tfUsernameReg" focusColor="#641c24" labelFloat="true" prefHeight="30.0" prefWidth="219.0" promptText="*Username" unFocusColor="#641c24">
+                     <VBox.margin>
+                        <Insets bottom="10.0" />
+                     </VBox.margin>
+                  </JFXTextField>
+                  <JFXTextField fx:id="tfEmailReg" focusColor="#641c24" labelFloat="true" prefHeight="30.0" prefWidth="219.0" promptText="*Email" unFocusColor="#641c24">
+                     <VBox.margin>
+                        <Insets bottom="10.0" />
+                     </VBox.margin>
+                  </JFXTextField>
+                  <JFXButton id="nextButton" buttonType="RAISED" onAction="#handleRegistrationPaneNextButtonPressed" prefHeight="40.0" prefWidth="219.0" ripplerFill="WHITE" text="NEXT &gt;" />
+                  <HBox alignment="CENTER" centerShape="false">
+                     <children>
+                        <Label id="specialAccountDetails" fx:id="newUserMsgLabel" alignment="CENTER" contentDisplay="CENTER" prefHeight="41.0" prefWidth="219.0" textAlignment="CENTER" wrapText="true" />
+                     </children>
+                  </HBox>
+               </children>
+            </VBox>
+         </children>
+      </Pane>
+      <Pane id="passwordPane" fx:id="passwordPane" prefHeight="640.0" prefWidth="400.0" visible="false">
+         <children>
+            <Button id="exitRegistrationButton" layoutX="362.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleExitPasswordPaneButton" prefHeight="24.0" prefWidth="24.0" />
+            <VBox layoutX="91.0" layoutY="121.0" prefHeight="383.0" prefWidth="219.0" spacing="10.0">
+               <children>
+                  <HBox alignment="CENTER" prefHeight="54.0" prefWidth="219.0">
+                     <children>
+                        <Label id="newUserLabel" text="Choose a password" />
+                     </children>
+                  </HBox>
+                  <JFXTextField fx:id="tfAccountPass" focusColor="#641c24" labelFloat="true" prefHeight="30.0" prefWidth="219.0" promptText="*Account ID" unFocusColor="#641c24">
+                     <VBox.margin>
+                        <Insets bottom="10.0" />
+                     </VBox.margin>
+                  </JFXTextField>
+                  <JFXPasswordField fx:id="pfConfirmationCode" focusColor="#641c24" labelFloat="true" prefHeight="30.0" prefWidth="219.0" promptText="*Confirmation Code" unFocusColor="#641c24">
+                     <VBox.margin>
+                        <Insets bottom="10.0" />
+                     </VBox.margin>
+                  </JFXPasswordField>
+                  <JFXPasswordField fx:id="pfPasswordPass" focusColor="#641c24" labelFloat="true" prefHeight="30.0" prefWidth="219.0" promptText="*Password" unFocusColor="#641c24">
+                     <VBox.margin>
+                        <Insets bottom="10.0" />
+                     </VBox.margin>
+                  </JFXPasswordField>
+                  <JFXPasswordField fx:id="pfPasswordConfirm" focusColor="#641c24" labelFloat="true" prefHeight="30.0" prefWidth="219.0" promptText="*Confirm Password" unFocusColor="#641c24">
+                     <VBox.margin>
+                        <Insets bottom="10.0" />
+                     </VBox.margin>
+                  </JFXPasswordField>
+                  <JFXButton buttonType="RAISED" onAction="#handleFinishButtonPressed" prefHeight="40.0" prefWidth="219.0" ripplerFill="WHITE" text="FINISH" />
+                  <HBox alignment="CENTER" centerShape="false">
+                     <children>
+                        <Label id="passwordDetailsLabel" fx:id="passwordDetailsLabel" alignment="CENTER" contentDisplay="CENTER" prefHeight="77.0" prefWidth="219.0" textAlignment="CENTER" wrapText="true" />
+                     </children>
+                  </HBox>
+               </children>
+            </VBox>
+         </children>
+      </Pane>
+      <Pane id="resetPasswordPane" fx:id="resetPasswordPane" prefHeight="640.0" prefWidth="400.0" visible="false">
+         <children>
+            <Button id="exitResetButton" layoutX="362.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleExitResetPasswordButton" prefHeight="24.0" prefWidth="24.0" />
+            <VBox layoutX="91.0" layoutY="121.0" prefHeight="374.0" prefWidth="219.0" spacing="10.0">
+               <children>
+                  <HBox alignment="CENTER" prefHeight="117.0" prefWidth="219.0">
+                     <children>
+                        <Label id="resetLabel" text="Reset Password" />
+                     </children>
+                  </HBox>
+                  <JFXTextField id="emailField" fx:id="tfEmailReset" focusColor="#641c24" labelFloat="true" prefHeight="30.0" prefWidth="219.0" promptText="*Email" unFocusColor="#641c24" />
+                  <VBox spacing="10.0">
+                     <children>
+                        <HBox alignment="CENTER">
+                           <children>
+                              <JFXButton id="nextButton" buttonType="RAISED" onAction="#handleResetPasswordNextButtonPressed" prefHeight="40.0" prefWidth="219.0" ripplerFill="WHITE" text="Next &gt;" />
+                           </children>
+                        </HBox>
+                        <HBox alignment="CENTER">
+                           <children>
+                              <Label id="resetPasswordMsgLabel" fx:id="resetPasswordMsgLabel" alignment="CENTER" prefHeight="50.0" prefWidth="219.0" textAlignment="CENTER" />
+                           </children>
+                        </HBox>
+                     </children>
+                  </VBox>
+               </children>
+            </VBox>
+         </children>
+      </Pane>
+   </children>
 </AnchorPane>
